# ERP-BERHAN

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.example  .env.example.phase1  .env.localhost  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .py  .yamllint  01b_fix_base_compose.ps1  03_strip_bom.ps1  AGENTS.md  BOT.PY  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  DATABASE.md  Dockerfile  Dockerrun.aws.json  HOTFIX_README.md  HOTFIX_V3_README.md  Institution Name.xlsx  MIGRATIONS_CONSOLIDATION.md  MIGRATIONS_README.md  MIGRATIONS_TODO.txt  Makefile  PATCH_NOTES.md  PATCH_README.txt  README-DEPLOY.md  README.md  README.txt  README_10of10.md  README_10of10_PATCH.md  README_AUTOMERGE_FIX_v2.md  README_LOCAL.md  (+107 more)
.github/: CODEOWNERS  dependabot.yml
.venv_phase1/: pyvenv.cfg
Plugin/: __init__.py
_backup_day1_20251027_130659/: app.py  wsgi.py
_backup_day1_20251027_142923/: __init__.py  app.py
_backup_day1_20251027_143913/: app.py  wsgi.py
alembic/: env.py
analytics/: __init__.py  reporting.py
app_ext/: README_INTEGRATE.txt  perf_defaults.py  security_headers.py
audit_out/: audit_scan_report.md  blueprint_audit.md  code_health_audit.md  full_pytest_run.md  healthz_audit.md  layer10_db_alembic.md  layer11_deployment.md  layer1_identity_access.md  layer2_client_onboarding.md  layer3_employee_rbac.md  layer4_orders_commissions.md  layer5_maintenance_geo_sla.md  layer6_procurement_actual.md  layer6_procurement_import.md  layer7_reporting_analytics.md  layer8_geo_engine.md  layer9_telegram_bot.md  layered_remediation_plan.md  main_branch_audit.md  main_branch_full_scope_audit.md  main_branch_layered_audit_2025-12-12.md  main_branch_readiness_2024-12-13.md  main_branch_system_scorecard.md  main_branch_update_plan.md  (+4 more)
(+1398 files in other folders)
