[project]
name = "erp-berhan"
version = "0.1.0"
description = "ERP-BERHAN platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "license" }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.isort]
profile = "black"

[tool.pip-audit]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
