[project]
name = "erp-berhan"
version = "0.1.0"
description = "ERP-BERHAN platform"
readme = "README.md"
# Force 3.12 so Render will not choose 3.13
requires-python = ">=3.12,<3.13"
# Ensure this file actually exists (case-sensitive on Linux). Prefer "LICENSE".
license = { file = "LICENSE" }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.isort]
profile = "black"

[tool.pip-audit]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
